--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "demo-picker-2",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x",
+    "next": "14.1.3"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
