--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,5 @@
 {
-  "version": 2,
-  "builds": [{ 
-    "src": "package.json",
-    "use": "@vercel/next"
-  }],
-  "build": {
-    "env": {
-      "NODE_VERSION": "18.x"
-    }
-  }
+  "buildCommand": "next build",
+  "devCommand": "next dev",
+  "framework": "nextjs"
 } 
