--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "18.x",
-    "next": "14.1.3"
+    "node": "18.x"
   },
   "scripts": {
     "dev": "next dev",
@@ -16,9 +15,9 @@
     "@types/canvas-confetti": "^1.9.0",
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^11.0.8",
-    "next": "14.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "^15.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
